project links font awespme link button(icon)

--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
             <div class="project-tile">
               <h1>Tribute Page</h1>
               <a href="https://shakexsempe.github.io/lewis-hamilton-tribute-page/" target="_blank">
+                <i class="fas fa-external-link-alt"></i>
                 <h2>FreeCodeCamp Responsive Web Design Project #1</h2>
                 <p>
                   <strike>Six</strike> Seven time Formula One World Champion Lewis Hamilton tribute
@@ -302,6 +303,7 @@
             <div class="project-tile">
               <h1>Planet Animation</h1>
               <a href="https://shakexsempe.github.io/Planet-Animation/" target="_blank">
+                <i class="fas fa-external-link-alt"></i>
                 <h2>Advanced CSS3 Tutorial</h2>
                 <p>
                   CSS animations and positioning tutorial project
@@ -321,6 +323,7 @@
             <div class="project-tile">
               <h1>Thato Technical Drawings</h1>
               <a href="https://shakexsempe.github.io/thato-tech-drawings/" target="_blank">
+                <i class="fas fa-external-link-alt"></i>
                 <h2>Technical Drawings Lecturer Website</h2>
                 <p>Small business Responsive website for a highschool technical drawings teacher</p>
               </a>
@@ -339,6 +342,7 @@
             <div class="project-tile">
               <h1>Valoir &trade;</h1>
               <a href="https://shakexsempe.github.io/parallex-scrolling-effect/" target="_blank">
+                <i class="fas fa-external-link-alt"></i>
                 <h2>CSS 3 Tutorial </h2>
                 <p>
                   CSS Parallax scrolling effect project
@@ -359,6 +363,7 @@
             <div class="project-tile">
               <h1>Product Landing Page</h1>
               <a href="https://shakexsempe.github.io/Product-Landing-Page/" target="_blank">
+                <i class="fas fa-external-link-alt"></i>
                 <h2>FreeCodeCamp Responsive Web Design Project #3</h2>
                 <p>Audi RS3 Product Landing Page.</p>
               </a>
@@ -377,6 +382,7 @@
             <div class="project-tile">
               <h1>Responsive Cards</h1>
               <a href="https://shakexsempe.github.io/responsive-cards/" target="_blank">
+                <i class="fas fa-external-link-alt"></i>
                 <h2>HTML 5 Tutorial</h2>
                 <p>
                   CSS Grid to implement device width responsive cards.
@@ -396,6 +402,7 @@
             <div class="project-tile" id="fpl">
               <h1>Technical Documentation Page</h1>
               <a href="https://shakexsempe.github.io/Technical-Documentation-Page/" target="_blank">
+                <i class="fas fa-external-link-alt"></i>
                 <h2>FreeCodeCamp Responsive Web Design Project #4</h2>
                 <p>A beginners guide to the premier league fantasy football
                   platform.</p>
@@ -414,8 +421,8 @@
             <div class="project-tile">
               <h1>Munch Up&trade;</h1>
               <a href="https://shakexsempe.github.io/sidebar-munch-up/" target="_blank">
+                <i class="fas fa-external-link-alt"></i>
                 <h2>Baked treats website</h2>
-
                 <p>Small business website for a local cake maker</p>
               </a>
               <ul class="tech-list">
@@ -433,6 +440,7 @@
             <div class="project-tile" id="fpl">
               <h1>Animated Gradients</h1>
               <a href="https://shakexsempe.github.io/animated-gradients/" target="_blank">
+                <i class="fas fa-external-link-alt"></i>
                 <h2>CSS Animations</h2>
                 <p>Background and Text gradient animation from a selection of four primary shades.</p>
               </a>
@@ -451,6 +459,7 @@
             <div class="project-tile">
               <h1>Overflowing Icons</h1>
               <a href="https://shakexsempe.github.io/Icons-overflow/" target="_blank">
+                <i class="fas fa-external-link-alt"></i>
                 <h2>HTML 5 Tutorial</h2>
                 <p>
                   Page displaying my social media links and contact info
@@ -470,6 +479,7 @@
             <div class="project-tile">
               <h1>Image Gallery</h1>
               <a href="https://shakexsempe.github.io/image-gallery/" target="_blank">
+                <i class="fas fa-external-link-alt"></i>
                 <h2>HTML 5 Tutorial project</h2>
                 <p>A slideshow of images with preview</p>
               </a>
@@ -489,6 +499,7 @@
             <div class="project-tile">
               <h1>Basic Node & Express</h1>
               <a href="https://damp-bastion-14701.herokuapp.com/" target="_blank">
+                <i class="fas fa-external-link-alt"></i>
                 <h2>FreeCodeCamp APIs & Microservices Certificate</h2>
                 <p>
                   Managing Node Packages (npm) and Express challenges.
@@ -505,27 +516,6 @@
               <img src="img/npm.bmp" alt="img" />
             </div>
           </div>
-
-          <!-- <div class="project-item">
-            <div class="project-tile">
-              <h1>React Random Quote Machine</h1>
-              <a href="https://unruffled-darwin-7a9a4f.netlify.app/" target="_blank">
-                <h2>FreeCodeCamp Front End Libraries Project #1</h2>
-                <p>
-                  React Random quote Generator presented by Aryan Jabbari. <br>
-                  App hosted on Netlify
-                </p>
-              </a>
-              <ul class="tech-list">
-                <li>React</li>
-                <li>NPM</li>
-                <li>Netlify</li>
-              </ul>
-            </div>
-            <div class="project-img">
-              <img src="img/react2.bmp" alt="img" />
-            </div>
-          </div> -->
 
         </div>
 
