about section bug fix

--- a/index.html
+++ b/index.html
@@ -530,6 +530,7 @@
         <div class="about-img">
           <img src="img/me.jpg" alt="img" />
         </div>
+      </div>
         <div class="col-right">
           <div class="about-header">
             <h1 data-text="aboutme" class="section-title">About<span>me</span></h1>
