netlify skill item

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 <h2>Netlify</h2>
                 <ul>
                   <li>Static websites</li>
-                  <li>Web applications</li>
+                  <li>Responsive websites </li>
                 </ul>
               </div>
 
