#about: git and fcc links instead of cv

--- a/index.html
+++ b/index.html
@@ -557,8 +557,14 @@
               stacks such as Python and PHP back end scripting.
             </p>
           </article>
-            <a id="cv" href="cv/bSempeCV2021.pdf" target="_blank">Download Resume</a>
-          
+          <article id="cv">
+            <a href="https://www.freecodecamp.org/boitumelo-sempe" target="_blank" class="fcc-link">
+              <i class="fab fa-github">FCC</i>
+            </a>
+            <a href="https://github.com/ShakexSempe" target="_blank">
+              <i class="fab fa-github">GITHUB</i>
+            </a>
+          </article>
   </section>
   <!--End of About Section-->
 
