removed profile link: github link

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </h1>
 
         <h1 id="aka"><span>a.k.a</span></h1>
-        <a href="#about" type="button" class="cta" id="cta-header">
+        <a href="#about" type="button" class="cta" id="cta-header" class="scroll-link">
           <span style="--i:1;">s</span>
           <span style="--i:2;">h</span>
           <span style="--i:3;">a</span>
@@ -276,8 +276,8 @@
       </div>
 
       <div class="all-projects">
-        <a target="_blank" href="https://github.com/ShakexSempe" id="profile-link"> <i class="fab fa-github"></i> Git
-          Hub</a>
+        <!-- <a target="_blank" href="https://github.com/ShakexSempe" id="profile-link"> <i class="fab fa-github"></i> Git
+          Hub</a> -->
 
 
         <div class="project-item">
@@ -567,7 +567,7 @@
           <a href="https://www.freecodecamp.org/boitumelo-sempe" target="_blank" class="fcc-link">
             <i class="fab fa-free-code-camp"></i>fcc
           </a>
-          <a href="https://github.com/ShakexSempe" target="_blank">
+          <a href="https://github.com/ShakexSempe" target="_blank" id="profile-link">
             <i class="fab fa-github"></i>github
           </a>
         </article>
