projects header h1 background image and animation change

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
   <section id="projects">
     <div class="projects container">
       <div class="projects-header">
-        <h1 data-text="projects" id="projects-h1" class="section-title"><span>Projects</span></h1>
+        <h1 data-text="projects" id="projects-h1" class="section-title">Projects</h1>
       </div>
 
       <div class="all-projects">
