--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
               </div>
               <h2>Javascript</h2>
               <ul>
-                <li>Basic Algorithim Scripting</li>
-                <li>ES6 Fundementals.</li>
+                <li>Basic Algorithm Scripting</li>
+                <li>ES6 Fundamentals.</li>
                 <li>JSon</li>
               </ul>
               <p> </p>
@@ -148,7 +148,7 @@
               <div class="icon">
                 <img src="icons/icons8-bootstrap-48.png" alt="icon" />
               </div>
-              <h2>Bootsrap</h2>
+              <h2>Bootstrap</h2>
               <ul>
                 <li>Front End CSS Framework</li>
               </ul>
