html spell check

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               <h2>Sass</h2>
               <ul>
                 <li>Nested Rules</li>
-                <li>Mxins and Functions</li>
+                <li>Mixins and Functions</li>
                 <li>_Partials</li>
               </ul>
             </div>
@@ -173,7 +173,7 @@
               <h2>React JS</h2>
               <ul>
                 <li>Reactstrap</li>
-                <li>React Fundementals</li>
+                <li>React Fundamentals</li>
               </ul>
             </div>
 
@@ -255,7 +255,7 @@
               </div>
               <h2>Customer Care</h2>
               <ul>
-                <li>Client liasson</li>
+                <li>Client liaison</li>
                 <li>Quality Control Standards Compliance</li>
                 <li>Team worker</li>
               </ul>
@@ -546,7 +546,7 @@
             International School of South Africa.</p>
 
           <p>Boitumelo is looking first job in the industry where he can gain the necessary professional
-            compentencies to make an effective web developer that can add value to web based products
+            competencies to make an effective web developer that can add value to web based products
             and services.
           </p>
 
