contact item h2 a hover color

--- a/index.html
+++ b/index.html
@@ -583,6 +583,18 @@
       <div class="contact-items">
         <div class="contact-item">
           <div class="icon">
+            <img src="/icons/icons8-email-64.png" alt="img" srcset="https://img.icons8.com/nolan/64/email.png" />
+          </div>
+          <div class="contact-info">
+            <h1>Email</h1>
+            <a href="mailto:bshakex@gmail.com">
+              <h2> bshakex@gmail.com</h2>
+            </a>
+          </div>
+        </div>
+
+        <div class="contact-item">
+          <div class="icon">
             <img src="/icons/icons8-phone-64.png" alt="img" srcset="https://img.icons8.com/nolan/64/phone.png" />
           </div>
           <div id="phone" class="contact-info">
@@ -591,15 +603,7 @@
             <h2>+27 71 687 6941</h2>
           </div>
         </div>
-        <div class="contact-item">
-          <div class="icon">
-            <img src="/icons/icons8-email-64.png" alt="img" srcset="https://img.icons8.com/nolan/64/email.png" />
-          </div>
-          <div class="contact-info">
-            <h1>Email</h1>
-            <h2>bshakex@gmail.com</h2>
-          </div>
-        </div>
+        
         <div class="contact-item">
           <div class="icon">
             <img src="/icons/icons8-address-64.png" alt="img" srcset="https://img.icons8.com/nolan/64/address.png" />
@@ -610,6 +614,7 @@
             <h2>South Africa</h2>
           </div>
         </div>
+
       </div>
     </div>
   </section>
