--- a/index.html
+++ b/index.html
@@ -47,7 +47,58 @@
     <!--end of Progress-bar-->
   </header>
   <!--End of Header-->
+<!--About Section-->
+<section id="about">
+  <div class="about container">
+    <div class="col-left">
+      <div class="about-img">
+        <img src="img/me.jpg" alt="img" />
+      </div>
+    </div>
+    <div class="col-right">
+      <div class="about-header">
+        <h1 data-text="aboutme" class="section-title">About<span>me</span></h1>
+      </div>
+      <div class="about-title">
+         <h2>Front End Web Developer</h2>
+        <a id="cv-download" href="cv/bSempeCV2021.pdf">download resume</a>
+      </div>
+        <article id="content-1" class="custom-scrollbar-js">
+        <p>Boitumelo 'Shakex' Sempe is an International Relations Graduate from University of Pretoria having gained
+          his A-levels from the
+          International School of South Africa.</p>
 
+        <p>
+        </p>
+
+        <p>Boitumelo is looking first job in the industry where he can gain the necessary professional
+          competencies to make an effective web developer that can add value to web based products
+          and services.
+        </p>
+
+        <p>A former Customer Care agent at the Compensation Fund (Department of Labour), he started coding in 2019
+          and enrolled in the online coding bootcamp
+          <a href="https://www.freecodecamp.org/boitumelo-sempe" target="_blank" class="fcc-link">FreeCodeCamp</a>
+          where he completed a certificate in Responsive Web Design.
+        </p>
+        <p>Boitumelo is currently studying towards MERN stack competency and committed to learning other development
+          stacks such as Python and PHP back end scripting.
+        </p>
+      </article>
+      
+      <article id="cv">
+        <a href="https://codepen.io/bSempe" target="_blank" class="fcc-link">
+          <i class="fab fa-codepen" aria-hidden="true"></i>CodePen
+        </a>
+        <a href="https://www.freecodecamp.org/boitumelo-sempe" target="_blank" class="fcc-link">
+          <i class="fab fa-free-code-camp"></i>fcc
+        </a>
+        <a href="https://github.com/ShakexSempe" target="_blank" id="profile-link">
+          <i class="fab fa-github"></i>github
+        </a>
+      </article>
+</section>
+<!--End of About Section-->
   <!--Hero Section-->
   <section id="welcome-section">
     <div class="hero container">
@@ -527,52 +578,7 @@
   </section>
   <!--End of Projects Section-->
 
-  <!--About Section-->
-  <section id="about">
-    <div class="about container">
-      <div class="col-left">
-        <div class="about-img">
-          <img src="img/me.jpg" alt="img" />
-        </div>
-      </div>
-      <div class="col-right">
-        <div class="about-header">
-          <h1 data-text="aboutme" class="section-title">About<span>me</span></h1>
-        </div>
-        <h2>Front End Web Developer</h2>
-        <article id="content-1" class="custom-scrollbar-js">
-          <p>Boitumelo 'Shakex' Sempe is an International Relations Graduate from University of Pretoria having gained
-            his A-levels from the
-            International School of South Africa.</p>
-
-          <p>Boitumelo is looking first job in the industry where he can gain the necessary professional
-            competencies to make an effective web developer that can add value to web based products
-            and services.
-          </p>
-
-          <p>A former Customer Care agent at the Compensation Fund (Department of Labour), he started coding in 2019
-            and enrolled in the online coding bootcamp
-            <a href="https://www.freecodecamp.org/boitumelo-sempe" target="_blank" class="fcc-link">FreeCodeCamp</a>
-            where he completed a certificate in Responsive Web Design.
-          </p>
-          <p>Boitumelo is currently studying towards MERN stack competency and committed to learning other development
-            stacks such as Python and PHP back end scripting.
-          </p>
-        </article>
-        
-        <article id="cv">
-          <a href="https://codepen.io/bSempe" target="_blank" class="fcc-link">
-            <i class="fab fa-codepen" aria-hidden="true"></i>CodePen
-          </a>
-          <a href="https://www.freecodecamp.org/boitumelo-sempe" target="_blank" class="fcc-link">
-            <i class="fab fa-free-code-camp"></i>fcc
-          </a>
-          <a href="https://github.com/ShakexSempe" target="_blank" id="profile-link">
-            <i class="fab fa-github"></i>github
-          </a>
-        </article>
-  </section>
-  <!--End of About Section-->
+  
 
   <!--Contact Section-->
   <section id="contact">
