--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
         <div class="project-item">
           <div class="project-tile">
             <h1>Munch Up&trade;</h1>
-            <a href="https://shakexsempe.github.io/sidebar-munch-up/" target="_blank">
+            <a href="https://shakexsempe.github.io/munch-up/" target="_blank">
               <i class="fas fa-external-link-alt"></i>
               <h2>Baked treats website</h2>
               <p>Small business website for a local cake maker</p>
