--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="header container">
       <nav id="navbar">
         <div class="brand">
-          <a href="#footer">
+          <a href="#footer" class="scroll-link">
             <h1><span>S</span>hakex <span>S</span>empe</h1>
           </a>
         </div>
@@ -63,7 +63,7 @@
         </h1>
 
         <h1 id="aka"><span>a.k.a</span></h1>
-        <a href="#about" type="button" class="cta" id="cta-header" class="scroll-link">
+        <a href="#about" type="button" class="scroll-link" id="cta-header" class="scroll-link">
           <span style="--i:1;">s</span>
           <span style="--i:2;">h</span>
           <span style="--i:3;">a</span>
