google icon nav links

--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
           </div>
           <div class="links-container">
             <ul class="links">
-              <li><a href="#welcome-section" data-after="Home" class="scroll-link">Home</a></li>
-              <li><a href="#skills" data-after="skills" class="scroll-link">Skills</a></li>
-              <li><a href="#projects" data-after="Projects" class="scroll-link">Projects</a></li>
-              <li><a href="#about" data-after="About" class="scroll-link">About</a></li>
-              <li><a href="#contact" data-after="Contact" class="scroll-link">Contact</a></li>
-              <li><a href="#footer" data-after="Footer" class="scroll-link">Footer</a></li>
+              <li><a href="#welcome-section" data-after="Home" class="scroll-link"><i class="fas fa-home"></i>Home</a></li>
+             
+              <li><a href="#skills" data-after="skills" class="scroll-link"><i class="fas fa-layer-group"></i>Skills</a></li>
+              <li><a href="#projects" data-after="Projects" class="scroll-link"><i class="fab fa-github"></i>Projects</a></li>
+              <li><a href="#about" data-after="About" class="scroll-link"><i class="fas fa-user-circle"></i>About</a></li>
+              <li><a href="#contact" data-after="Contact" class="scroll-link"><i class="far fa-address-card"></i>Contact</a></li>
+              <li><a href="#footer" data-after="Footer" class="scroll-link"><i class="fas fa-user-friends"></i>Socials</a></li>
             </ul>
           </div>
         </div>
