--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         <div class="project-item">
           <div class="project-tile">
             <h1>Valoir &trade;</h1>
-            <a href="https://shakexsempe.github.io/parallex-scrolling-effect/" target="_blank">
+            <a href="https://valoir.netlify.app/" target="_blank">
               <i class="fas fa-external-link-alt"></i>
               <h2>CSS 3 Tutorial </h2>
               <p>
