--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
   <div class="about container">
     <div class="col-left">
       <div class="about-img">
-        <img src="img/me.jpg" alt="img" />
+        <img id="me" src="img/me.jpg" alt="img" />
       </div>
     </div>
     <div class="col-right">
