footer brand box shadow and hover animations

--- a/index.html
+++ b/index.html
@@ -631,8 +631,8 @@
   <footer id="footer">
     <div class="footer container">
       <div class="brand">
-        <!-- <h1><span>S</span>hakex <span>S</span>empe</h1> -->
-        <h1> shakex sempe</h1>
+        <h1><span>S</span>hakex <span>S</span>empe</h1>
+        <!-- <h1> shakex sempe</h1> -->
         <h2>Web Development</h2>
       </div>
 
