--- a/index.html
+++ b/index.html
@@ -672,7 +672,9 @@
         </div>
       </div>
       <div id="bs21">
-        <p>copyright&copy; Boitumelo Sempe: <span id="date"></span> </p>
+        <p>copyright&copy; Boitumelo Sempe.</p>
+        <p><span>s</span>hakex <span>s</span>empe</p> 
+          <span id="date"></span> 
       </div>
     </div>
 
