cv target _blank

--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
       </div>
       <div class="about-title">
          <h2>Front End Web Developer</h2>
-        <a id="cv-download" href="cv/bSempeCV2021.pdf">download resume</a>
+        <a id="cv-download" href="cv/bSempeCV2021.pdf" target="_blank">download resume</a>
       </div>
         <article id="content-1" class="custom-scrollbar-js">
         <p>Boitumelo 'Shakex' Sempe is an International Relations Graduate from University of Pretoria having gained
