--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
       <div class="brand">
         <h1><span>S</span>hakex <span>S</span>empe</h1>
         <!-- <h1> shakex sempe</h1> -->
-        <h2>Web Development</h2>
+        <h2>Thanks for visiting! </h2>
       </div>
 
       <section class="cube-container">
