--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
           <div class="project-tile">
             <h1>Tribute Page</h1>
             <a href="https://shakexsempe.github.io/lewis-hamilton-tribute-page/" target="_blank">
-              <i class="fas fa-external-link-alt"></i> 
+              <i class="fas fa-link"></i> 
               <h2>FreeCodeCamp Responsive Web Design Project #1</h2>
               <p>
                 <strike>Six</strike> Seven time Formula One World Champion Lewis Hamilton tribute
@@ -308,7 +308,7 @@
           <div class="project-tile">
             <h1>Planet Animation</h1>
             <a href="https://shakexsempe.github.io/Planet-Animation/" target="_blank">
-              <i class="fas fa-external-link-alt"></i>
+              <i class="fas fa-link"></i>
               <h2>Advanced CSS3 Tutorial</h2>
               <p>
                 CSS animations and positioning tutorial project
@@ -328,7 +328,7 @@
           <div class="project-tile">
             <h1>Thato Technical Drawings</h1>
             <a href="https://shakexsempe.github.io/thato-tech-drawings/" target="_blank">
-              <i class="fas fa-external-link-alt"></i>
+              <i class="fas fa-link"></i>
               <h2>Technical Drawings Lecturer Website</h2>
               <p>Small business Responsive website for a highschool technical drawings teacher</p>
             </a>
@@ -347,7 +347,7 @@
           <div class="project-tile">
             <h1>Valoir &trade;</h1>
             <a href="https://valoir.netlify.app/" target="_blank">
-              <i class="fas fa-external-link-alt"></i>
+              <i class="fas fa-link"></i>
               <h2>CSS 3 Tutorial </h2>
               <p>
                 CSS Parallax scrolling effect project
@@ -368,7 +368,7 @@
           <div class="project-tile">
             <h1>Product Landing Page</h1>
             <a href="https://shakexsempe.github.io/Product-Landing-Page/" target="_blank">
-              <i class="fas fa-external-link-alt"></i>
+              <i class="fas fa-link"></i>
               <h2>FreeCodeCamp Responsive Web Design Project #3</h2>
               <p>Audi RS3 Product Landing Page.</p>
             </a>
@@ -387,7 +387,7 @@
           <div class="project-tile">
             <h1>Responsive Cards</h1>
             <a href="https://shakexsempe.github.io/responsive-cards/" target="_blank">
-              <i class="fas fa-external-link-alt"></i>
+              <i class="fas fa-link"></i>
               <h2>HTML 5 Tutorial</h2>
               <p>
                 CSS Grid to implement device width responsive cards.
@@ -407,7 +407,7 @@
           <div class="project-tile" id="fpl">
             <h1>Technical Documentation Page</h1>
             <a href="https://shakexsempe.github.io/Technical-Documentation-Page/" target="_blank">
-              <i class="fas fa-external-link-alt"></i>
+              <i class="fas fa-link"></i>
               <h2>FreeCodeCamp Responsive Web Design Project #4</h2>
               <p>A beginners guide to the premier league fantasy football
                 platform.</p>
@@ -426,7 +426,7 @@
           <div class="project-tile">
             <h1>Munch Up&trade;</h1>
             <a href="https://shakexsempe.github.io/munch-up/" target="_blank">
-              <i class="fas fa-external-link-alt"></i>
+              <i class="fas fa-link"></i>
               <h2>Baked treats website</h2>
               <p>Small business website for a local cake maker</p>
             </a>
@@ -445,7 +445,7 @@
           <div class="project-tile" id="fpl">
             <h1>Animated Gradients</h1>
             <a href="https://shakexsempe.github.io/animated-gradients/" target="_blank">
-              <i class="fas fa-external-link-alt"></i>
+              <i class="fas fa-link"></i>
               <h2>CSS Animations</h2>
               <p>Background and Text gradient animation from a selection of four primary shades.</p>
             </a>
@@ -464,7 +464,7 @@
           <div class="project-tile">
             <h1>Overflowing Icons</h1>
             <a href="https://shakexsempe.github.io/Icons-overflow/" target="_blank">
-              <i class="fas fa-external-link-alt"></i>
+              <i class="fas fa-link"></i>
               <h2>HTML 5 Tutorial</h2>
               <p>
                 Page displaying my social media links and contact info
@@ -484,7 +484,7 @@
           <div class="project-tile">
             <h1>Image Gallery</h1>
             <a href="https://shakexsempe.github.io/image-gallery/" target="_blank">
-              <i class="fas fa-external-link-alt"></i>
+              <i class="fas fa-link"></i>
               <h2>HTML 5 Tutorial project</h2>
               <p>A slideshow of images with preview</p>
             </a>
@@ -504,7 +504,7 @@
           <div class="project-tile">
             <h1>Basic Node & Express</h1>
             <a href="https://damp-bastion-14701.herokuapp.com/" target="_blank">
-              <i class="fas fa-external-link-alt"></i>
+              <i class="fas fa-link"></i>
               <h2>FreeCodeCamp APIs & Microservices Certificate</h2>
               <p>
                 Managing Node Packages (npm) and Express challenges.
