--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
             </ul>
           </div>
           <div class="project-img">
-            <a href="#"><img src="img/lewis.bmp" alt="lewis hamilton" />
-            </a>
+            <img src="img/lewis.bmp" alt="lewis hamilton" />
+            
           </div>
         </div>
 
@@ -692,6 +692,7 @@
     integrity="sha512-2hIlk2fL+NNHkULe9gGdma/T5vSYk80U5tvAFSy3dGEl8XD4h2i6frQvHv5B+bm/Itmi8nJ6krAcj5FWFcBGig=="
     crossorigin="anonymous"></script>
   <script src="js/app.js"></script>
+  <script src="js/projects.js"></script>
 </body>
 
 </html>
