javascript projects section setup and test

--- a/index.html
+++ b/index.html
@@ -277,11 +277,9 @@
       </div>
 
       <div class="all-projects">
-        <!-- <a target="_blank" href="https://github.com/ShakexSempe" id="profile-link"> <i class="fab fa-github"></i> Git
-          Hub</a> -->
 
 
-        <div class="project-item">
+        <!-- <div class="project-item">
           <div class="project-tile">
             <h1>Tribute Page</h1>
             <a href="https://shakexsempe.github.io/lewis-hamilton-tribute-page/" target="_blank">
@@ -520,7 +518,7 @@
           <div class="project-img">
             <img src="img/npm.bmp" alt="img" />
           </div>
-        </div>
+        </div> -->
 
       </div>
 
