--- a/index.html
+++ b/index.html
@@ -276,253 +276,7 @@
         <h1 data-text="projects" id="projects-h1" class="section-title">Projects</h1>
       </div>
 
-      <div class="all-projects">
-
-
-        <!-- <div class="project-item">
-          <div class="project-tile">
-            <h1>Tribute Page</h1>
-            <a href="https://shakexsempe.github.io/lewis-hamilton-tribute-page/" target="_blank">
-              <i class="fas fa-link"></i> 
-              <h2>FreeCodeCamp Responsive Web Design Project #1</h2>
-              <p>
-                <strike>Six</strike> Seven time Formula One World Champion Lewis Hamilton tribute
-                page.
-              </p>
-            </a>
-            <ul class="tech-list">
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>Javascript</li>
-            </ul>
-          </div>
-          <div class="project-img">
-            <img src="img/lewis.bmp" alt="lewis hamilton" />
-            
-          </div>
-        </div>
-
-        <div class="project-item">
-          <div class="project-tile">
-            <h1>Planet Animation</h1>
-            <a href="https://shakexsempe.github.io/Planet-Animation/" target="_blank">
-              <i class="fas fa-link"></i>
-              <h2>Advanced CSS3 Tutorial</h2>
-              <p>
-                CSS animations and positioning tutorial project
-              </p>
-            </a>
-            <ul class="tech-list">
-              <li>HTML</li>
-              <li>CSS</li>
-            </ul>
-          </div>
-          <div class="project-img">
-            <img src="img/planets.bmp" alt="img" />
-          </div>
-        </div>
-
-        <div class="project-item">
-          <div class="project-tile">
-            <h1>Thato Technical Drawings</h1>
-            <a href="https://shakexsempe.github.io/thato-tech-drawings/" target="_blank">
-              <i class="fas fa-link"></i>
-              <h2>Technical Drawings Lecturer Website</h2>
-              <p>Small business Responsive website for a highschool technical drawings teacher</p>
-            </a>
-            <ul class="tech-list">
-              <li>HTML</li>
-              <li>Sass</li>
-              <li>Javascript</li>
-            </ul>
-          </div>
-          <div class="project-img">
-            <img src="img/thato.bmp" alt="img" />
-          </div>
-        </div>
-
-        <div class="project-item">
-          <div class="project-tile">
-            <h1>Valoir &trade;</h1>
-            <a href="https://valoir.netlify.app/" target="_blank">
-              <i class="fas fa-link"></i>
-              <h2>CSS 3 Tutorial </h2>
-              <p>
-                CSS Parallax scrolling effect project
-              </p>
-            </a>
-            <ul class="tech-list">
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>Sass</li>
-            </ul>
-          </div>
-          <div class="project-img">
-            <img src="img/valoir.bmp" alt="img" />
-          </div>
-        </div>
-
-        <div class="project-item">
-          <div class="project-tile">
-            <h1>Product Landing Page</h1>
-            <a href="https://shakexsempe.github.io/Product-Landing-Page/" target="_blank">
-              <i class="fas fa-link"></i>
-              <h2>FreeCodeCamp Responsive Web Design Project #3</h2>
-              <p>Audi RS3 Product Landing Page.</p>
-            </a>
-            <ul class="tech-list">
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>Javascript
-            </ul>
-          </div>
-          <div class="project-img">
-            <img src="img/product-landing.bmp" alt="img" />
-          </div>
-        </div>
-
-        <div class="project-item">
-          <div class="project-tile">
-            <h1>Responsive Cards</h1>
-            <a href="https://shakexsempe.github.io/responsive-cards/" target="_blank">
-              <i class="fas fa-link"></i>
-              <h2>HTML 5 Tutorial</h2>
-              <p>
-                CSS Grid to implement device width responsive cards.
-              </p>
-            </a>
-            <ul class="tech-list">
-              <li>HTML</li>
-              <li>CSS</li>
-            </ul>
-          </div>
-          <div class="project-img">
-            <img src="img/cards.bmp" alt="img" />
-          </div>
-        </div>
-
-        <div class="project-item">
-          <div class="project-tile" id="fpl">
-            <h1>Technical Documentation Page</h1>
-            <a href="https://shakexsempe.github.io/Technical-Documentation-Page/" target="_blank">
-              <i class="fas fa-link"></i>
-              <h2>FreeCodeCamp Responsive Web Design Project #4</h2>
-              <p>A beginners guide to the premier league fantasy football
-                platform.</p>
-            </a>
-            <ul class="tech-list">
-              <li>HTML</li>
-              <li>CSS</li>
-            </ul>
-          </div>
-          <div class="project-img">
-            <img src="img/fpl.bmp" alt="img" />
-          </div>
-        </div>
-
-        <div class="project-item">
-          <div class="project-tile">
-            <h1>Munch Up&trade;</h1>
-            <a href="https://shakexsempe.github.io/munch-up/" target="_blank">
-              <i class="fas fa-link"></i>
-              <h2>Baked treats website</h2>
-              <p>Small business website for a local cake maker</p>
-            </a>
-            <ul class="tech-list">
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>Javascript</li>
-            </ul>
-          </div>
-          <div class="project-img">
-            <img src="img/munch-logo.jpg" alt="img" />
-          </div>
-        </div>
-
-        <div class="project-item">
-          <div class="project-tile" id="fpl">
-            <h1>Animated Gradients</h1>
-            <a href="https://shakexsempe.github.io/animated-gradients/" target="_blank">
-              <i class="fas fa-link"></i>
-              <h2>CSS Animations</h2>
-              <p>Background and Text gradient animation from a selection of four primary shades.</p>
-            </a>
-            <ul class="tech-list">
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>Javascript</li>
-            </ul>
-          </div>
-          <div class="project-img">
-            <img src="img/gradients.bmp" alt="img" />
-          </div>
-        </div>
-
-        <div class="project-item">
-          <div class="project-tile">
-            <h1>Overflowing Icons</h1>
-            <a href="https://shakexsempe.github.io/Icons-overflow/" target="_blank">
-              <i class="fas fa-link"></i>
-              <h2>HTML 5 Tutorial</h2>
-              <p>
-                Page displaying my social media links and contact info
-              </p>
-            </a>
-            <ul class="tech-list">
-              <li>HTML</li>
-              <li>CSS</li>
-            </ul>
-          </div>
-          <div class="project-img">
-            <img src="img/icons.bmp" alt="img" />
-          </div>
-        </div>
-
-        <div class="project-item">
-          <div class="project-tile">
-            <h1>Image Gallery</h1>
-            <a href="https://shakexsempe.github.io/image-gallery/" target="_blank">
-              <i class="fas fa-link"></i>
-              <h2>HTML 5 Tutorial project</h2>
-              <p>A slideshow of images with preview</p>
-            </a>
-            <ul class="tech-list">
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>Javascript</li>
-            </ul>
-          </div>
-          <div class="project-img">
-            <a href="#"><img src="img/img-slide.bmp" alt="img" />
-            </a>
-          </div>
-        </div>
-
-        <div class="project-item">
-          <div class="project-tile">
-            <h1>Basic Node & Express</h1>
-            <a href="https://damp-bastion-14701.herokuapp.com/" target="_blank">
-              <i class="fas fa-link"></i>
-              <h2>FreeCodeCamp APIs & Microservices Certificate</h2>
-              <p>
-                Managing Node Packages (npm) and Express challenges.
-              </p>
-              <p>App hosted on Heroku</p>
-            </a>
-            <ul class="tech-list">
-              <li>Node.js</li>
-              <li>Express.js</li>
-              <li>Heroku</li>
-            </ul>
-          </div>
-          <div class="project-img">
-            <img src="img/npm.bmp" alt="img" />
-          </div>
-        </div> -->
-
-      </div>
-
-    </div>
+      <div class="all-projects"></div>
   </section>
   <!--End of Projects Section-->
 
