--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </div>
       <!--Dropdown-->
       <div class="dropdown">
-        <button onclick="dropdown()" class="dropbtn"></button>
+        <button onclick="dropdown()" class="dropbtn">My Skills</button>
         <div id="myDropdown" class="dropdown-content">
 
           <div class="skills-bottom">
