welcome section links label test

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <ul class="links">
               <li><a href="#welcome-section" data-after="Home" class="scroll-link">H<i class="fas fa-home"></i>me</a></li>
              
-              <li><a href="#skills" data-after="skills" class="scroll-link">sk<i class="fas fa-lightbulb"></i>lls</a></li>
+              <li> <label for="skills"></label><a href="#skills" data-after="skills" class="scroll-link">sk<i class="fas fa-lightbulb"></i>lls</a></li>
               <li><a href="#projects" data-after="Projects" class="scroll-link">Pr<i class="fab fa-github"></i>jects</a></li>
               <li><a href="#about" data-after="About" class="scroll-link">Ab<i class="fas fa-user-circle"></i>ut</a></li>
               <li><a href="#contact" data-after="Contact" class="scroll-link">cont<i class="fas fa-at"></i>ct</a></li>
