--- a/index.html
+++ b/index.html
@@ -29,13 +29,12 @@
           </div>
           <div class="links-container">
             <ul class="links">
-              <li><a href="#welcome-section" data-after="Home" class="scroll-link">H<i class="fas fa-home"></i>me</a></li>
-             
-              <li> <label for="skills"></label><a href="#skills" data-after="skills" class="scroll-link">sk<i class="fas fa-lightbulb"></i>lls</a></li>
-              <li><a href="#projects" data-after="Projects" class="scroll-link">Pr<i class="fab fa-github"></i>jects</a></li>
-              <li><a href="#about" data-after="About" class="scroll-link">Ab<i class="fas fa-user-circle"></i>ut</a></li>
-              <li><a href="#contact" data-after="Contact" class="scroll-link">cont<i class="fas fa-at"></i>ct</a></li>
-              <li><a href="#footer" data-after="Footer" class="scroll-link">soc<i class="fas fa-user-friends"></i>ls</a></li>
+              <li><a href="#welcome-section" data-after="Home" class="scroll-link"><i class="fas fa-home"></i>home</a></li>
+              <li><a href="#skills" data-after="skills" class="scroll-link"><i class="fas fa-lightbulb"></i>skills</a></li>
+              <li><a href="#projects" data-after="Projects" class="scroll-link"><i class="fab fa-github"></i>projects</a></li>
+              <li><a href="#about" data-after="About" class="scroll-link"><i class="fas fa-user-circle"></i>about</a></li>
+              <li><a href="#contact" data-after="Contact" class="scroll-link"><i class="fas fa-at"></i>contact</a></li>
+              <li><a href="#footer" data-after="Socials" class="scroll-link"><i class="fas fa-user-friends"></i>socials</a></li>
             </ul>
           </div>
         </div>
