--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </h1>
 
         <h1 id="aka"><span>a.k.a</span></h1>
-        <a href="#" type="button" class="scroll-link" id="cta-header" class="scroll-link">
+        <a href="#about" type="button" class="scroll-link" id="cta-header" class="scroll-link">
           <span style="--i:1;">s</span>
           <span style="--i:2;">h</span>
           <span style="--i:3;">a</span>
