--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
             <div class="bar"></div>
           </div>
           <div class="links-container">
+            
             <ul class="links">
+              <figure class="nav-avi">
+                <a href="#me" id="avi">
+                  <img src="/img/me.jpg" alt="avi">
+                </a>
+              </figure>
               <li><a href="#welcome-section" data-after="Home" class="scroll-link"><i class="fas fa-home"></i>home</a></li>
               <li><a href="#skills" data-after="skills" class="scroll-link"><i class="fas fa-lightbulb"></i>skills</a></li>
               <li><a href="#projects" data-after="Projects" class="scroll-link"><i class="fab fa-github"></i>projects</a></li>
