removed / from img tag

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <ul class="links">
               <figure class="nav-avi">
                 <a href="#me" id="avi">
-                  <img src="/img/me.jpg" alt="avi">
+                  <img src="img/me.jpg" alt="avi">
                 </a>
               </figure>
               <li><a href="#welcome-section" data-after="Home" class="scroll-link"><i class="fas fa-home"></i>home</a></li>
