--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
             
             <ul class="links">
               <figure class="nav-avi">
-                <a href="#me" id="avi">
+                <a href="#footer" class="scroll-link" id="avi">
                   <img src="img/me.jpg" alt="avi">
                 </a>
               </figure>
-              <li><a href="#welcome-section" data-after="Home" class="scroll-link"><i class="fas fa-home"></i>home</a></li>
-              <li><a href="#skills" data-after="skills" class="scroll-link"><i class="fas fa-lightbulb"></i>skills</a></li>
-              <li><a href="#projects" data-after="Projects" class="scroll-link"><i class="fab fa-github"></i>projects</a></li>
-              <li><a href="#about" data-after="About" class="scroll-link"><i class="fas fa-user-circle"></i>about</a></li>
-              <li><a href="#contact" data-after="Contact" class="scroll-link"><i class="fas fa-at"></i>contact</a></li>
-              <li><a href="#footer" data-after="Socials" class="scroll-link"><i class="fas fa-user-friends"></i>socials</a></li>
+              <li><a href="#welcome-section" data-after="Home" class="scroll-link scroll-li"><i class="fas fa-home"></i>home</a></li>
+              <li><a href="#skills" data-after="skills" class="scroll-link scroll-li"><i class="fas fa-lightbulb"></i>skills</a></li>
+              <li><a href="#projects" data-after="Projects" class="scroll-link scroll-li"><i class="fab fa-github"></i>projects</a></li>
+              <li><a href="#about" data-after="About" class="scroll-link scroll-li"><i class="fas fa-user-circle"></i>about</a></li>
+              <li><a href="#contact" data-after="Contact" class="scroll-link scroll-li"><i class="fas fa-at"></i>contact</a></li>
+              <li><a href="#footer" data-after="Socials" class="scroll-link scroll-li"><i class="fas fa-user-friends"></i>socials</a></li>
             </ul>
           </div>
         </div>
