navbar avi scroll link to about section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             
             <ul class="links">
               <figure class="nav-avi">
-                <a href="#footer" class="scroll-link" id="avi">
+                <a href="#about" class="scroll-link" id="avi">
                   <img src="img/me.jpg" alt="avi">
                 </a>
               </figure>
