vsc skills item

--- a/index.html
+++ b/index.html
@@ -268,6 +268,16 @@
               </ul>
             </div>
 
+            <div class="skills-item">
+              <div class="icon">
+                <img src="icons/icons8-visual-studio-code-2019-48.png" alt="icon" />
+              </div>
+              <h2>Visual Studio Code</h2>
+              <ul>
+                <li>Code Editor</li>
+              </ul>
+            </div>
+
           </div>
         </div>
       </div>
