--- a/index.html
+++ b/index.html
@@ -417,22 +417,22 @@
 
       <div class="social-icon">
         <div class="social-item">
-          <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" target="_blank">
+          <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" data-icon="linkedin" target="_blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
         </div>
         <div class="social-item">
-          <a href="https://github.com/ShakexSempe" target="_blank">
+          <a href="https://github.com/ShakexSempe" data-icon="github" target="_blank">
             <i class="fab fa-github"></i>
           </a>
         </div>
         <div class="social-item">
-          <a href="https://www.freecodecamp.org/boitumelo-sempe" target="_blank">
+          <a href="https://www.freecodecamp.org/boitumelo-sempe" data-icon="freeCodeCamp" target="_blank">
             <i class="fab fa-free-code-camp"></i>
           </a>
         </div>
         <div class="social-item">
-          <a href="https://twitter.com/Shake_x11" target="_blank">
+          <a href="https://twitter.com/Shake_x11" data-icon="twitter" target="_blank">
             <i class="fab fa-twitter"></i>
           </a>
         </div>
