--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
                   <img src="img/me.jpg" alt="avi">
                 </a>
               </figure>
-              <li><a href="#welcome-section" data-after="Home" class="scroll-link scroll-li"><i class="fas fa-home"></i>home</a></li>
+              <!-- <li><a href="#welcome-section" data-after="Home" class="scroll-link scroll-li"><i class="fas fa-home"></i>home</a></li> -->
               <li><a href="#skills" data-after="skills" class="scroll-link scroll-li"><i class="fas fa-lightbulb"></i>skills</a></li>
               <li><a href="#projects" data-after="Projects" class="scroll-link scroll-li"><i class="fab fa-github"></i>projects</a></li>
               <li><a href="#about" data-after="About" class="scroll-link scroll-li"><i class="fas fa-user-circle"></i>about</a></li>
               <li><a href="#contact" data-after="Contact" class="scroll-link scroll-li"><i class="fas fa-at"></i>contact</a></li>
               <li><a href="#footer" data-after="Socials" class="scroll-link scroll-li"><i class="fas fa-user-friends"></i>socials</a></li>
+              <li><a href="forms/form.html" target="_blank" data-after="forms" class="scroll-li"><i class="fas fa-user-friends"></i>forms</a></li>
             </ul>
           </div>
         </div>
@@ -56,7 +57,7 @@
   <!--End of Header-->
 
   <!--Hero Section-->
-  <section id="welcome-section">
+  <section id="home" class="welcome-section">
     <div class="hero container">
       <div id="hero-h1">
         <h1>
@@ -447,7 +448,7 @@
   </footer>
   <!--End of Footer-->
   <!--back to top button-->
-  <a href="#welcome-section" class="scroll-link top-link">
+  <a href="#home" class="scroll-link top-link">
     <i class="fas fa-arrow-up"></i>
   </a>
   <!--end of back to top button-->
