--- a/forms/form.html
+++ b/forms/form.html
@@ -19,14 +19,14 @@
     <!--Header-->
     <header id="header">
         <div class="header container">
-            <nav id="navbar">
+            <nav id="navbar" class="form-nav">
                 <div class="brand">
                     <a href="#footer" class="scroll-link">
                         <h1><span>S</span>hakex <span>S</span>empe</h1>
                     </a>
                 </div>
                 <div class="nav-list">
-                    <div class="hamburger">
+                    <div class="hamburger" id="form-toggle">
                         <div class="bar"></div>
                     </div>
                     <div class="links-container">
@@ -53,13 +53,143 @@
 
     <!--Hero Section-->
     <section class="welcome-section">
-        <div class="hero container">
-            <div class="form-container">
-                
+        <div class="form-container">
+            <header>Signup Form</header>
+            <div class="form-progress-bar">
+                <div class="step">
+                    <p>
+                        Name
+                    </p>
+                    <div class="bullet">
+                        <span>1</span>
+                    </div>
+                    <div class="check fas fa-check"></div>
+                </div>
+                <div class="step">
+                    <p>
+                        Contact
+                    </p>
+                    <div class="bullet">
+                        <span>2</span>
+                    </div>
+                    <div class="check fas fa-check"></div>
+                </div>
+                <div class="step">
+                    <p>
+                        Birth
+                    </p>
+                    <div class="bullet">
+                        <span>3</span>
+                    </div>
+                    <div class="check fas fa-check"></div>
+                </div>
+                <div class="step">
+                    <p>
+                        Submit
+                    </p>
+                    <div class="bullet">
+                        <span>4</span>
+                    </div>
+                    <div class="check fas fa-check"></div>
+                </div>
+            </div>
+
+            <div class="form-outer">
+                <form action="#">
+                    <div class="page slide-page">
+                        <div class="title">
+                            Basic Info:
+                        </div>
+                        <div class="field">
+                            <div class="label">
+                                First Name
+                            </div>
+                            <input type="text">
+                        </div>
+                        <div class="field">
+                            <div class="label">
+                                Last Name
+                            </div>
+                            <input type="text">
+                        </div>
+                        <div class="field">
+                            <button class="firstNext next">Next</button>
+                        </div>
+                    </div>
+                    <div class="page">
+                        <div class="title">
+                            Contact Info:
+                        </div>
+                        <div class="field">
+                            <div class="label">
+                                Email Address
+                            </div>
+                            <input type="text">
+                        </div>
+                        <div class="field">
+                            <div class="label">
+                                Phone Number
+                            </div>
+                            <input type="Number">
+                        </div>
+                        <div class="field btns">
+                            <button class="prev-1 prev">Previous</button>
+                            <button class="next-1 next">Next</button>
+                        </div>
+                    </div>
+                    <div class="page">
+                        <div class="title">
+                            Date of Birth:
+                        </div>
+                        <div class="field">
+                            <div class="label">
+                                Date
+                            </div>
+                            <input type="text">
+                        </div>
+                        <div class="field">
+                            <div class="label">
+                                Gender
+                            </div>
+                            <select>
+                                <option>Male</option>
+                                <option>Female</option>
+                                <option>Other</option>
+                            </select>
+                        </div>
+                        <div class="field btns">
+                            <button class="prev-2 prev">Previous</button>
+                            <button class="next-2 next">Next</button>
+                        </div>
+                    </div>
+                    <div class="page">
+                        <div class="title">
+                            Login Details:
+                        </div>
+                        <div class="field">
+                            <div class="label">
+                                Username
+                            </div>
+                            <input type="text">
+                        </div>
+                        <div class="field">
+                            <div class="label">
+                                Password
+                            </div>
+                            <input type="password">
+                        </div>
+                        <div class="field btns">
+                            <button class="prev-3 prev">Previous</button>
+                            <button class="submit">Submit</button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </section>
     <!-- End of Hero Section-->
+
+    
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
