--- a/forms/form.html
+++ b/forms/form.html
@@ -102,15 +102,15 @@
                         </div>
                         <div class="field">
                             <div class="label">
-                                First Name
+                                First Name*
                             </div>
-                            <input type="text">
+                            <input type="text" tabindex="1" required placeholder="first name">
                         </div>
                         <div class="field">
                             <div class="label">
                                 Last Name
                             </div>
-                            <input type="text">
+                            <input type="text" tabindex="2">
                         </div>
                         <div class="field">
                             <button class="firstNext next">Next</button>
