header shadow and fon size

--- a/forms/form.html
+++ b/forms/form.html
@@ -54,7 +54,9 @@
     <!--Hero Section-->
     <section class="welcome-section">
         <div class="form-container">
-            <header>Signup Form</header>
+            <header>
+                <h2>get in touch</h2>
+            </header>
             <div class="form-progress-bar">
                 <div class="step">
                     <p>
