basic info and contact info input options

--- a/forms/form.html
+++ b/forms/form.html
@@ -126,13 +126,13 @@
                             <div class="label">
                                 Email Address
                             </div>
-                            <input type="text">
+                            <input type="email" required>
                         </div>
                         <div class="field">
                             <div class="label">
                                 Phone Number
                             </div>
-                            <input type="Number">
+                            <input type="tel">
                         </div>
                         <div class="field btns">
                             <button class="prev-1 prev">Previous</button>
