--- a/forms/form.html
+++ b/forms/form.html
@@ -39,9 +39,8 @@
                             </figure>
                             <li>
                                 <a href="../index.html" data-after="home" class="scroll-li"><i
-                                        class="fas fa-user-friends"></i>Recruit</a></li>
-                            <li><a href="../index.html" data-after="home" class="scroll-li">
-                                    <i class="fas fa-user-friends"></i>Valoir</a></li>
+                                        class="fas fa-user-friends"></i>home</a>
+                                    </li>
                         </ul>
                     </div>
                 </div>
@@ -112,7 +111,7 @@
                             <div class="label">
                                 Last Name
                             </div>
-                            <input type="text" tabindex="2">
+                            <input type="text" tabindex="2" placeholder="last name">
                         </div>
                         <div class="field">
                             <button class="firstNext next">Next</button>
@@ -132,7 +131,7 @@
                             <div class="label">
                                 Phone Number
                             </div>
-                            <input type="tel">
+                            <input type="tel" min="10">
                         </div>
                         <div class="field btns">
                             <button class="prev-1 prev">Previous</button>
