input text transfrom and ::invalid bc

--- a/forms/form.html
+++ b/forms/form.html
@@ -103,7 +103,7 @@
                         </div>
                         <div class="field">
                             <div class="label">
-                                First Name*
+                                First name*
                             </div>
                             <input type="text" tabindex="1" required placeholder="first name">
                         </div>
