form.js form initial form logic

--- a/forms/form.html
+++ b/forms/form.html
@@ -125,13 +125,13 @@
                             <div class="label">
                                 Email Address
                             </div>
-                            <input type="email" required>
+                            <input type="email" tabindex="3" required>
                         </div>
                         <div class="field">
                             <div class="label">
                                 Phone Number
                             </div>
-                            <input type="tel" min="10">
+                            <input type="tel" tabindex="4" minlength="10">
                         </div>
                         <div class="field btns">
                             <button class="prev-1 prev">Previous</button>
