for without required input test

--- a/forms/form.html
+++ b/forms/form.html
@@ -105,7 +105,7 @@
                             <div class="label">
                                 First name*
                             </div>
-                            <input type="text" tabindex="1" required placeholder="first name">
+                            <input type="text" tabindex="1"  placeholder="first name">
                         </div>
                         <div class="field">
                             <div class="label">
@@ -125,13 +125,13 @@
                             <div class="label">
                                 Email Address
                             </div>
-                            <input type="email" tabindex="3" required>
+                            <input type="email" tabindex="3" >
                         </div>
                         <div class="field">
                             <div class="label">
                                 Phone Number
                             </div>
-                            <input type="tel" tabindex="4" minlength="10">
+                            <input type="tel" tabindex="4" >
                         </div>
                         <div class="field btns">
                             <button class="prev-1 prev">Previous</button>
