--- a/forms/form.html
+++ b/forms/form.html
@@ -199,7 +199,7 @@
         src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"
         integrity="sha512-2hIlk2fL+NNHkULe9gGdma/T5vSYk80U5tvAFSy3dGEl8XD4h2i6frQvHv5B+bm/Itmi8nJ6krAcj5FWFcBGig=="
         crossorigin="anonymous"></script>
-    <script src="/forms/form.js"></script>
+    <script src="forms/form.js"></script>
     <script src="../js/app.js"></script>
     <!-- <script src="js/projects.js"></script> -->
 </body>
