--- a/forms/form.html
+++ b/forms/form.html
@@ -105,13 +105,13 @@
                             <div class="label">
                                 First name*
                             </div>
-                            <input type="text" tabindex="1"  placeholder="first name">
+                            <input type="text"  placeholder="first name">
                         </div>
                         <div class="field">
                             <div class="label">
                                 Last Name
                             </div>
-                            <input type="text" tabindex="2" placeholder="last name">
+                            <input type="text"  placeholder="last name">
                         </div>
                         <div class="field">
                             <button class="firstNext next">Next</button>
@@ -125,13 +125,13 @@
                             <div class="label">
                                 Email Address
                             </div>
-                            <input type="email" tabindex="3" >
+                            <input type="email"  >
                         </div>
                         <div class="field">
                             <div class="label">
                                 Phone Number
                             </div>
-                            <input type="tel" tabindex="4" >
+                            <input type="tel"  >
                         </div>
                         <div class="field btns">
                             <button class="prev-1 prev">Previous</button>
@@ -199,7 +199,7 @@
         src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"
         integrity="sha512-2hIlk2fL+NNHkULe9gGdma/T5vSYk80U5tvAFSy3dGEl8XD4h2i6frQvHv5B+bm/Itmi8nJ6krAcj5FWFcBGig=="
         crossorigin="anonymous"></script>
-    <script src="forms/form.js"></script>
+    <script src="/forms/form.js"></script>
     <script src="../js/app.js"></script>
     <!-- <script src="js/projects.js"></script> -->
 </body>
