name input required*

--- a/forms/form.html
+++ b/forms/form.html
@@ -105,7 +105,7 @@
                             <div class="label">
                                 First name*
                             </div>
-                            <input type="text"  placeholder="first name">
+                            <input type="text"  placeholder="first name" required>
                         </div>
                         <div class="field">
                             <div class="label">
