first nect button type= submit and name required

--- a/forms/form.html
+++ b/forms/form.html
@@ -96,7 +96,7 @@
             </div>
 
             <div class="form-outer">
-                <form action="#">
+                <form action="https://formsubmit.co/your@email.com" method="POST">
                     <div class="page slide-page">
                         <div class="title">
                             Basic Info:
@@ -114,7 +114,7 @@
                             <input type="text"  placeholder="last name">
                         </div>
                         <div class="field">
-                            <button class="firstNext next">Next</button>
+                            <button type="submit" class="firstNext next">Next</button>
                         </div>
                     </div>
                     <div class="page">
@@ -125,13 +125,13 @@
                             <div class="label">
                                 Email Address
                             </div>
-                            <input type="email"  >
+                            <input type="email" required>
                         </div>
                         <div class="field">
                             <div class="label">
                                 Phone Number
                             </div>
-                            <input type="tel"  >
+                            <input type="tel">
                         </div>
                         <div class="field btns">
                             <button class="prev-1 prev">Previous</button>
