form submit test with js submitBtn on

--- a/forms/form.html
+++ b/forms/form.html
@@ -186,6 +186,7 @@
                     </div>
 
                     <!-- form options -->
+                    <input type="hidden" name="_subject" value="New submission!">
                     <input type="hidden" name="_next" value="https://shakexsempe.github.io/Portfolio-Webpage/">
                 </form>
             </div>
