--- a/forms/form.html
+++ b/forms/form.html
@@ -144,19 +144,19 @@
                     </div>
                     <div class="page" >
                         <div class="title">
-                            Contact Info:
+                            Services
                         </div>
                         <div class="field">
                             <div class="label">
-                                Email Address
+                                Freelance
                             </div>
-                            <input type="email" name="email" required placeholder="eg. youremail@gmail.com">
+                            <input type="text" name="freelance" placeholder="website proposal">
                         </div>
                         <div class="field">
                             <div class="label">
-                                Phone Number
+                                recruitment
                             </div>
-                            <input type="tel" name="phone-number" placeholder="phone number (optional)">
+                            <input type="text" name="recruitment" placeholder="agency/establishment..">
                         </div>
                         <div class="field btns">
                             <button class="prev-2 prev">Previous</button>
@@ -169,7 +169,7 @@
                         </div>
                         <div class="field">
                             <div class="label">
-                                message
+                            Leave a message or request CV 
                             </div>
                             <textarea name="textarea" id="textarea" cols="30" rows="10" placeholder="request CV">
                                
