--- a/forms/form.html
+++ b/forms/form.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="step">
                     <p>
-                        Message
+                        Service
                     </p>
                     <div class="bullet">
                         <span>3</span>
