form box shadows

--- a/forms/form.html
+++ b/forms/form.html
@@ -127,7 +127,7 @@
                         </div>
                         <div class="field">
                             <div class="label">
-                                Email Address
+                                Email Address*
                             </div>
                             <input type="email" name="email" required placeholder="eg. youremail@gmail.com">
                         </div>
